Finaliza guardado/carga de partida y centra menú inicial